WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53225
REGRESSION (
r76743
): Uneven spacing in right-to-left justified text
https://bugs.webkit.org/show_bug.cgi?id=53225
Summary
REGRESSION (r76743): Uneven spacing in right-to-left justified text
mitz
Reported
2011-01-26 23:28:29 PST
In
r76743
I’ve introduced a regression in right-to-left justified text, since the notions of “trailing expansion” and “after expansion” are visual, but some Font code behaves like they’re logical.
Attachments
Fix up the mix up
(8.76 KB, patch)
2011-01-27 00:16 PST
,
mitz
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-01-27 00:16:30 PST
Created
attachment 80298
[details]
Fix up the mix up
mitz
Comment 2
2011-01-27 00:24:03 PST
Fixed in
r76768
. <
http://trac.webkit.org/changeset/76768
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug